2010-11-23  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [STYLES] invalid color values are not marked as such.
        https://bugs.webkit.org/show_bug.cgi?id=49960

        Properties having a valid structure but invalid values will also
        be marked as non-parsedOk in the Styles pane.

        WebCore:
        * css/CSSGrammar.y:
        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyle::populateObjectWithStyleProperties):

        LayoutTests:
        * inspector/resources/styles-new-API.css:
        (body):
        * inspector/styles-new-API-expected.txt:
        * inspector/styles-source-offsets-expected.txt:


Canonical link: https://commits.webkit.org/63076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72615 268f45cc-cd09-0410-ab3c-d52691b4dbfc